force-app/objects/TAG_Project__c/fields/Marketing_Deck_DocConfig__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Deck_DocConfig__c</fullName>
    <description>The PDFButler Doc Config ID for pulling templates for marketing decks</description>
    <inlineHelpText>PDFButler Doc Config for decks</inlineHelpText>
    <label>Marketing Deck Doc Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>