force-app/objects/TAG_Project__c/fields/TAG_Backup_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>TAG_Backup_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to User, displayed below OwnerId</description>
    <label>Backup Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>