force-app/objects/TAG_Project__c/fields/TAG_Buyer__c.field-meta.xml
<CustomField>
    <fullName>TAG_Buyer__c</fullName>
    <description>This field represents the buyer that this project record is for.</description>
    <label>Buyer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only account records where the type field equals &quot;Buyer&quot; can be used here.</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Buyer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>