force-app/objects/TAG_Project__c/fields/TAG_End_Date__c.field-meta.xml
<CustomField>
    <fullName>TAG_End_Date__c</fullName>
    <description>End Date field</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>