force-app/objects/TAG_Project__c/fields/TAG_Last_List_Sent__c.field-meta.xml
<CustomField>
    <fullName>TAG_Last_List_Sent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to TAG_Approval_List__c</description>
    <label>Last List Sent</label>
    <referenceTo>TAG_Approval_List__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>