force-app/objects/TAG_Project__c/fields/TAG_Next_List__c.field-meta.xml
<CustomField>
    <fullName>TAG_Next_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to TAG_Approval_List__c</description>
    <label>Next List</label>
    <referenceTo>TAG_Approval_List__c</referenceTo>
    <relationshipLabel>Projects (Next List)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>