force-app/objects/TAG_Project__c/fields/TAG_Next_List_Name__c.field-meta.xml
<CustomField>
    <fullName>TAG_Next_List_Name__c</fullName>
    <description>This field is auto-calculated based and displays the name of the next approval list based on the list record selected.</description>
    <formula>TAG_Next_List__r.TAG_Approval_List_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next List Name</label>
    <type>Text</type>
</CustomField>