force-app/objects/TAG_Project__c/fields/TAG_Offers_Submitted__c.field-meta.xml
<CustomField>
    <fullName>TAG_Offers_Submitted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is auto-calculated by a flow automation. It&apos;s the count of all target company opportunities related to this project record where Peak Stage = &quot;Verbal Offer Submitted&quot; or higher in the sales process.</description>
    <label>Offers Submitted</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>