force-app/objects/TAG_Project__c/fields/TAG_Primary_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>TAG_Primary_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to denote what Tremila user is the primary project manager for this project record.</description>
    <label>Primary Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>