force-app/objects/TAG_Project__c/fields/TAG_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>TAG_Project_Name__c</fullName>
    <description>The field indicates the name of the project.</description>
    <label>Project Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>