force-app/objects/TAG_Project__c/fields/TAG_Stage__c.field-meta.xml
<CustomField>
    <fullName>TAG_Stage__c</fullName>
    <description>Picklist with values: Kick-Off, On Going, Tail Period, Closed (Required)</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kick-Off</fullName>
                <default>true</default>
                <label>Kick-Off</label>
            </value>
            <value>
                <fullName>On Going</fullName>
            </value>
            <value>
                <fullName>Tail Period</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>