force-app/objects/TAG_Project__c/fields/TAG_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TAG_Start_Date__c</fullName>
    <description>Required Date field</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>