force-app/objects/TAG_Project__c/fields/TAG_Third_Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>TAG_Third_Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For if there is a 3rd deal maker on a project</description>
    <label>Third Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>