force-app/objects/TAG_Project__c/fields/TAG_Total_Target_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>TAG_Total_Target_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field is auto-calculated by a flow automation.  It&apos;s the count of all target company opportunities related to this project.</description>
    <label>Total Target Opportunities</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>