force-app/objects/TAG_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TAG_Project_Name__c</columns>
    <columns>TAG_Buyer__c</columns>
    <columns>TAG_Primary_Project_Manager__c</columns>
    <columns>TAG_Backup_Project_Manager__c</columns>
    <columns>TAG_Stage__c</columns>
    <columns>TAG_End_Date__c</columns>
    <columns>TAG_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>